--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-cxx": "^0.1.0-beta.9",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "commander": "^2.11.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
