--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "shelljs": "^0.7.8",
     "webpack": "^3.5.6",
     "webpack-manifest-plugin": "^1.3.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "version": "0.1.0-beta.14",
   "description": "cxx-cli",
