--- a/examples/express-pug/package.json
+++ b/examples/express-pug/package.json
@@ -6,11 +6,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.4",
-    "pug": "^2.0.0-rc.4",
-    "pug-loader": "^2.3.0"
+    "pug": "^2.0.0-rc.4"
   },
   "scripts": {
-    "start": "NODE_ENV=development ../../bin.js start",
+    "start": "npm run build && node index.js",
     "build": "NODE_ENV=production ../../bin.js build"
   }
 }
