--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "dependencies": {
     "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "commander": "^2.13.0",
-    "css-loader": "^0.28.9",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
+    "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.10",
-    "sass-loader": "^6.0.6",
-    "webpack": "^3.10.0",
-    "webpack-manifest-plugin": "^1.3.2",
-    "webpack-merge": "^4.1.1",
+    "postcss-loader": "^2.1.1",
+    "sass-loader": "^6.0.7",
+    "webpack": "^4.1.1",
+    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
   },
   "version": "0.1.0-beta.19",
