--- a/examples/express-pug/package.json
+++ b/examples/express-pug/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.4",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "start": "npm run build && node index.js",
-    "build": "NODE_ENV=production ../../bin.js build"
+    "build": "NODE_ENV=development ../../bin.js build"
   }
 }
