--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cxx-cli",
+  "name": "webpacker-cli",
   "dependencies": {
-    "autoprefixer": "^7.2.5",
+    "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -9,14 +9,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "commander": "^2.13.0",
-    "css-loader": "^0.28.10",
+    "commander": "^2.15.1",
+    "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
     "mini-css-extract-plugin": "^0.2.0",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.1",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
     "webpack": "^4.2.0",
     "webpack-manifest-plugin": "^2.0.0-rc.2",
@@ -24,15 +24,15 @@
     "webpack-node-externals": "^1.6.0"
   },
   "version": "0.1.0-beta.19",
-  "description": "cxx-cli",
+  "description": "webpacker-cli",
   "main": "index.js",
   "bin": {
-    "cxx": "bin.js"
+    "webpacker": "bin.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
   "author": "Wang Zuo <wzuoadjusted@gmail.com>",
-  "repository": "git@github.com:wangzuo/cxx-cli.git"
+  "repository": "git@github.com:wangzuo/webpacker-cli.git"
 }
