--- a/examples/express-pug/package.json
+++ b/examples/express-pug/package.json
@@ -12,6 +12,6 @@
   },
   "scripts": {
     "start": "npm run build && node index.js",
-    "build": "NODE_ENV=development ../../bin.js build"
+    "build": "NODE_ENV=production ../../bin.js build"
   }
 }
