--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
+    "html-webpack-plugin": "^3.1.0",
+    "lodash": "^4.17.5",
     "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.3",
