--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
   },
-  "version": "0.1.0-beta.19",
+  "version": "0.1.0",
   "description": "webpacker-cli",
   "main": "index.js",
   "bin": {
