--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.1.0",
     "lodash": "^4.17.5",
@@ -22,6 +21,7 @@
     "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
     "webpack": "^4.2.0",
+    "webpack-assets-manifest": "^3.0.1",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
   },
