--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "webpack": "^4.5.0",
     "webpack-assets-manifest": "^3.0.1",
     "webpack-merge": "^4.1.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpack-serve": "^0.3.1"
   },
   "version": "0.2.0",
   "description": "webpacker-cli",
