--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lodash": "^4.17.5",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
+    "style-loader": "^0.21.0",
     "webpack": "^4.5.0",
     "webpack-assets-manifest": "^3.0.1",
     "webpack-merge": "^4.1.2",
