--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "webpacker-cli",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
-    "@babel/plugin-transform-destructuring": "^7.0.0-beta.54",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-flow": "^7.0.0-beta.54",
-    "@babel/preset-react": "^7.0.0-beta.54",
-    "autoprefixer": "^9.1.0",
-    "babel-loader": "^8.0.0-beta",
-    "commander": "^2.16.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-destructuring": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.3",
+    "babel-loader": "^8.0.0",
+    "commander": "^2.17.1",
     "css-loader": "^1.0.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "glob": "^7.1.2",
+    "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.2",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "postcss-loader": "^2.1.6",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.4",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.17.1",
     "webpack-assets-manifest": "^3.0.2",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
