--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "style-loader": "^0.23.0",
     "webpack": "^4.20.2",
     "webpack-assets-manifest": "^3.1.0",
+    "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-serve": "^2.0.2"
+    "webpack-node-externals": "^1.7.2"
   },
   "license": "MIT",
   "author": "Wang Zuo <wzuoadjusted@gmail.com>",
