--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "webpacker": "bin.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "exit 0"
   },
   "dependencies": {
     "@babel/core": "^7.1.2",
