--- a/examples/spa/package.json
+++ b/examples/spa/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "serve": "NODE_ENV=development ../../bin.js serve",
+    "start": "NODE_ENV=development ../../bin.js serve",
     "build": "NODE_ENV=production ../../bin.js build"
   }
 }
