--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
-    "yaml": "^1.0.0",
+    "webpack-yaml-loader": "^0.2.1",
     "yargs": "^12.0.2"
   },
   "license": "MIT",
