--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.26.0",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-dev-server": "^3.1.10",
