--- a/package.json
+++ b/package.json
@@ -15,36 +15,36 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-destructuring": "^7.1.3",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.3.1",
+    "autoprefixer": "^9.4.4",
     "babel-loader": "^8.0.4",
-    "babel-plugin-emotion": "^9.2.11",
-    "css-loader": "^1.0.1",
-    "file-loader": "^2.0.0",
+    "babel-plugin-emotion": "^10.0.5",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.3",
-    "html-webpack-plugin": "^4.0.0-alpha",
-    "loader-utils": "^1.1.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.10.0",
+    "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^1.2.3",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.1",
-    "webpack": "^4.26.0",
+    "webpack": "^4.28.3",
     "webpack-assets-manifest": "^3.1.1",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.1.5",
     "webpack-node-externals": "^1.7.2",
     "webpack-yaml-loader": "^0.2.1",
     "yargs": "^12.0.5"
