--- a/examples/express-pug/package.json
+++ b/examples/express-pug/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "npm run build && node index.js",
-    "watch": "NODE_ENV=development ../../bin.js watch",
-    "build": "NODE_ENV=production ../../bin.js build"
+    "watch": "NODE_ENV=development ../../src/bin.js watch",
+    "build": "NODE_ENV=production ../../src/bin.js build"
   }
 }
