--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@svgr/webpack": "^4.1.0",
     "autoprefixer": "^9.4.4",
     "babel-loader": "^8.0.4",
     "babel-plugin-emotion": "^10.0.5",
