--- a/package.json
+++ b/package.json
@@ -10,23 +10,13 @@
     "src"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "cd examples/spa && yarn build"
   },
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-destructuring": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "^4.1.0",
-    "autoprefixer": "^9.4.7",
+    "autoprefixer": "^9.4.9",
     "babel-loader": "^8.0.5",
-    "babel-plugin-emotion": "^10.0.6",
+    "babel-preset-zkit": "^0.2.2",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -39,25 +29,17 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.1",
-    "webpack": "^4.29.0",
+    "terser-webpack-plugin": "^1.2.3",
+    "webpack": "^4.29.6",
     "webpack-assets-manifest": "^3.1.1",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
     "webpack-yaml-loader": "^0.2.1",
-    "yargs": "^12.0.5"
+    "yargs": "^13.2.1"
   },
   "license": "MIT",
   "author": "Wang Zuo <wzuoadjusted@gmail.com>",
   "repository": "git@github.com:wangzuo/webpacker-cli.git",
-  "devDependencies": {
-    "jest": "^24.0.0"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ]
-  }
+  "devDependencies": {}
 }
