--- a/examples/code-splitting/package.json
+++ b/examples/code-splitting/package.json
@@ -2,10 +2,16 @@
   "name": "code-splitting",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "NODE_ENV=development ../../src/bin.js serve -l http://localhost:3000",
+    "build": "NODE_ENV=production ../../src/bin.js build",
+    "analyze": "NODE_ENV=production ../../src/bin.js analyze"
+  },
   "author": "Wang Zuo <wzuoadjusted@gmail.com> (https://wangzuo.me/)",
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
