--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.3",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
