--- a/examples/code-splitting/package.json
+++ b/examples/code-splitting/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production ../../src/bin.js serve -l http://localhost:3000",
+    "serve": "NODE_ENV=production ../../src/bin.js serve",
     "build": "NODE_ENV=production ../../src/bin.js build",
     "analyze": "NODE_ENV=production ../../src/bin.js analyze"
   },
