--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   },
   "dependencies": {
     "@svgr/webpack": "^4.2.0",
-    "@swiftcarrot/babel": "^0.5.0",
     "autoprefixer": "^9.5.0",
-    "babel-preset-zkit": "^0.5.0",
+    "babel-preset-swiftcarrot": "^0.5.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
