--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^4.2.0",
+    "@swiftcarrot/yaml-loader": "^0.2.1",
     "autoprefixer": "^9.5.0",
     "babel-preset-swiftcarrot": "^0.6.1",
     "css-loader": "^2.1.1",
@@ -37,7 +38,6 @@
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1",
-    "webpack-yaml-loader": "^0.2.1",
     "yargs": "^13.2.2"
   },
   "license": "MIT",
