--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "html-webpack-plugin": "^4.0.0-beta.5",
     "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
+    "sass": "^1.20.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
