--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "src"
   ],
   "scripts": {
-    "test": "cd examples/code-splitting && yarn build"
+    "test": "cd examples/spa && yarn build"
   },
   "dependencies": {
     "@babel/core": "^7.6.4",
@@ -22,7 +22,7 @@
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "babel-preset-swiftcarrot": "^1.1.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.4.2",
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.5",
