--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@babel/core": "^7.6.4",
     "@svgr/webpack": "^4.3.3",
     "@swiftcarrot/yaml-loader": "^0.2.2",
-    "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "babel-preset-swiftcarrot": "^1.1.0",
     "css-loader": "^3.4.2",
@@ -31,6 +30,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "sass": "^1.23.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
