--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "file-loader": "^5.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.6",
-    "html-webpack-plugin": "^4.0.0-beta.11",
+    "html-webpack-plugin": "^4.0.3",
     "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
