--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "loader-utils": "^2.0.0",
