--- a/package.json
+++ b/package.json
@@ -1,52 +1,10 @@
 {
-  "name": "@swiftcarrot/webpacker",
-  "version": "3.0.1",
-  "description": "rails webpacker in node",
-  "main": "src/index.js",
-  "author": "Wang Zuo <wangzuo@swiftcarrot.com> (https://swiftcarrot.com)",
-  "repository": "git@github.com:swiftcarrot/webpacker.git",
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "bin": {
-    "webpacker": "src/bin.js"
-  },
-  "files": [
-    "src"
+  "name": "webpacker",
+  "version": "0.1.0",
+  "workspaces": [
+    "packages/*"
   ],
-  "scripts": {
-    "test": "cd example && yarn build"
-  },
-  "dependencies": {
-    "@babel/core": "^7.10.5",
-    "@svgr/webpack": "^5.4.0",
-    "@swiftcarrot/yaml-loader": "^0.2.2",
-    "babel-loader": "^8.1.0",
-    "babel-preset-swiftcarrot": "^1.1.0",
-    "css-loader": "^4.0.0",
-    "file-loader": "^6.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "fs-extra": "^9.0.1",
-    "glob": "^7.1.6",
-    "html-webpack-plugin": "^4.3.0",
-    "loader-utils": "^2.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^3.0.8",
-    "toml-loader": "^1.0.0",
-    "webpack": "^4.44.0",
-    "webpack-assets-manifest": "^3.1.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9",
-    "yargs": "^15.4.1"
-  },
+  "private": true, 
   "devDependencies": {
     "prettier": "^2.0.5"
   }
