--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,12 +1,11 @@
 {
   "name": "example",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "./src/index.js",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development ../src/bin.js dev-server",
-    "watch": "NODE_ENV=development ../src/bin.js watch",
-    "build": "NODE_ENV=production ../src/bin.js build",
-    "analyze": "NODE_ENV=production ../src/bin.js analyze"
+    "start": "NODE_ENV=development webpacker serve",
+    "watch": "NODE_ENV=development webpacker watch",
+    "build": "NODE_ENV=production webpacker build"
   }
 }
