--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -4,7 +4,6 @@
   "main": "./src/index.js",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
@@ -14,5 +13,8 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.6.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.0.0-0"
   }
 }
