--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -13,6 +13,7 @@
     "@svgr/webpack": "^5.4.0",
     "@swiftcarrot/yaml-loader": "^0.2.3",
     "babel-loader": "^8.1.0",
+    "babel-preset-swiftcarrot": "^1.1.1",
     "commander": "^6.0.0",
     "css-loader": "^4.2.1",
     "file-loader": "^6.0.0",
@@ -31,5 +32,7 @@
     "webpack": "^4.44.1",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "author": "Wang Zuo <wangzuo@swiftcarrot.com> (https://swiftcarrot.com/)",
+  "license": "MIT"
 }
